compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/output.txt
warning: language version 1.3 is deprecated and its support will be removed in a future version of Kotlin
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:2:5: error: unresolved reference: builder
    builder {}
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:3:5: error: unresolved reference: builder2
    builder2 { }
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:6:7: error: unresolved reference: start
    x.start()
      ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:8:5: error: unresolved reference: dummy
    dummy()
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:9:5: error: unresolved reference: C
    C().dummy()
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:10:5: error: unresolved reference: WithNested
    WithNested.Nested().dummy()
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:11:5: error: unresolved reference: WithInner
    WithInner().Inner().dummy()
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:13:5: error: unresolved reference: suspendAcceptsSuspend
    suspendAcceptsSuspend {
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/experimentalCoroutineCallFromReleaseWarnings/release.kt:14:9: error: suspension functions can be called only within coroutine body
        callRelease()
        ^
COMPILATION_ERROR
